--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -145,22 +145,35 @@
         </div>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
+<script src="js/lib/mermaid.min.js" 
+        onerror="console.error('failed to load mermaid.min.js');" 
+        onload="console.log('mermaid.min.js loaded');"></script>
 <script>
-    mermaid.initialize({ 
-        startOnLoad: false,
-        theme: 'dark',
-        themeVariables: {
-            darkMode: true,
-            background: '#0d1117',
-            primaryColor: '#58a6ff',
-            primaryTextColor: '#c9d1d9',
-            primaryBorderColor: '#30363d',
-            lineColor: '#8b949e',
-            secondaryColor: '#21262d',
-            tertiaryColor: '#161b22'
+    // инициализация mermaid после загрузки (если библиотека ещё не готова, повторим позже)
+    function initMermaid() {
+        console.log('initMermaid called, window.mermaid=', window.mermaid);
+        if (window.mermaid && typeof mermaid.initialize === 'function') {
+            console.log('mermaid available, initializing');
+            mermaid.initialize({ 
+                startOnLoad: false,
+                theme: 'dark',
+                themeVariables: {
+                    darkMode: true,
+                    background: '#0d1117',
+                    primaryColor: '#58a6ff',
+                    primaryTextColor: '#c9d1d9',
+                    primaryBorderColor: '#30363d',
+                    lineColor: '#8b949e',
+                    secondaryColor: '#21262d',
+                    tertiaryColor: '#161b22'
+                }
+            });
+        } else {
+            // если ещё не загружена, попробуем позже
+            setTimeout(initMermaid, 200);
         }
-    });
+    }
+    initMermaid();
 </script>
 <script type="module" src="js/app.js"></script>
 </body>
